--- a/src/components/Other/Header/_Header.scss
+++ b/src/components/Other/Header/_Header.scss
@@ -1,14 +1,12 @@
-header{
+.header{
     align-items: center;
     box-shadow: 0 0 8px #000;
     display: flex;
-    height: 124px;
+    height: 164px;
     justify-content: center;
     width: 100vw;
-}
 
-@media (max-width: 350px) {
-    h1{
-        font-size: 16px;
+    &__title{
+        font-size: 48px;
     }
 }
