--- a/src/components/Other/CountryInfo/_CountryInfo.scss
+++ b/src/components/Other/CountryInfo/_CountryInfo.scss
@@ -1,49 +1,69 @@
-.div-country-info{
+@use '../../../scss/Variables' as *;
+
+.country{
     align-items: center;
     display: flex;
-    justify-content: center;
-    gap: 96px;
-}
-
-.div-country-info h2{
-    margin-bottom: 36px;
-    font-size: 64px;
-}
-
-.div-country-info img{
-    border: 2px solid #000;
-    border-radius: 16px;
-    height: 360px;
-    width: auto;
-}
-
-.div-country-info ul {
-    display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    font-size: 32px;
-    gap: 36px;
-    list-style-type: none;
-}
+    gap: 124px;
+    justify-content: center;
 
-.div-country-info li button{
-    cursor: pointer;
-    margin-inline: 8px;
-    padding: 8px;
-}
+    &__img{
+        border: 2px solid $dark;
+        border-radius: 24px;
+        box-shadow: 0 0 16px 0 $dark;
+        height: 324px;
+        width: auto;
+    }
 
-@media (max-width: 1350px) {
-    .div-country-info{
+    &__info{
+        display: flex;
         flex-direction: column;
+        gap: 24px;
+
+        &--name{
+            font-size: 64px;
+        }
+
+        &--list{
+            display: flex;
+            flex-direction: column;
+            font-size: 24px;
+            gap: 16px;
+        }
+
+        &--borders-list{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 16px;
+            list-style-type: none;
+        }
+
+        &--link{
+            border: 2px solid $dark;
+            color: $dark;
+            padding: 4px 8px;
+            text-decoration: none;
+        }
     }
 }
 
-@media (max-width: 600px) {
-    .div-country-info img{
-        height: 180px;
-    }
+@media (max-width: 800px) {
+    .country{
+        gap: 56px;
 
-    .div-country-info ul {
-        font-size: 20px;
+        &__img{
+            height: 120px;
+        }
+
+        &__info{
+
+            &--name{
+                font-size: 24px;
+            }
+
+            &--list{
+                font-size: 16px;
+            }
+        }
     }
 }
